cmake: Refactor curl stuff into seperate CMakeLists file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_subdirectory(gmod-module-base/include)
+add_subdirectory(curl)
 
 add_library(chttp SHARED)
 
@@ -15,23 +16,11 @@ add_subdirectory(src)
 # Link against the GMod API
 target_link_libraries(chttp gmod-module-base)
 
+# Link against curl
+target_link_libraries(chttp curl-phony)
+
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 	add_definitions(-DWINDOWS_BUILD)
-endif()
-
-# Add the curl include directory
-target_include_directories(chttp PRIVATE curl/include)
-
-# Link against libcurl
-if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-	target_link_directories(chttp PRIVATE curl/lib)
-	if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x64")
-		target_link_libraries(chttp libcurl-x64)
-	else()
-		target_link_libraries(chttp libcurl)
-	endif()
-else()
-	target_link_libraries(chttp curl)
 endif()
 
 set_gmod_suffix_prefix(chttp)
