Automatically use the current Git version for the user agent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(gmod-chttp LANGUAGES CXX)
 
+set(CHTTP_VERSION "dev" CACHE STRING "The user-visible CHTTP version")
+
 set(CMAKE_CONFIGURATION_TYPES Release Debug)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -26,6 +28,8 @@ target_link_libraries(chttp curl-phony)
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 	target_link_options(chttp PRIVATE "-Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/chttp-linux.exp")
 endif()
+
+target_compile_definitions(chttp PRIVATE "CHTTP_VERSION=\"${CHTTP_VERSION}\"")
 
 set_gmod_suffix_prefix(chttp)
 
