--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -24,3 +24,19 @@ jobs:
       with:
         name: gmod-chttp-${{ env.CHTTP_VERSION }}-binaries
         path: dist/*
+
+  format:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install clang-format
+        run: sudo apt-get install -y clang-format
+
+      - name: Run clang-format
+        run: clang-format -style=file -i src/*.cpp src/*.h
+
+      - name: Check for changes
+        run: git diff --exit-code
