--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -26,17 +26,21 @@ jobs:
         path: dist/*
 
   format:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Install clang-format
-        run: sudo apt-get install -y clang-format
+        run: |
+          curl https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+          sudo add-apt-repository 'deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-15 main'
+          sudo apt-get update
+          sudo apt-get install -y clang-format-15
 
       - name: Run clang-format
-        run: clang-format -style=file -i src/*.cpp src/*.h
+        run: clang-format-15 -style=file -i src/*.cpp src/*.h
 
       - name: Check for changes
         run: git diff --exit-code
