Switch to upstream GLuaTest for CI

--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -78,7 +78,7 @@ jobs:
       - name: Checkout GLuaTest
         uses: actions/checkout@v3
         with:
-          repository: 'timschumi/GLuaTest'
+          repository: 'CFC-Servers/GLuaTest'
           path: 'GLuaTest'
 
       - name: Create folder structure
