--- a/.github/workflows/version-tag.yml
+++ b/.github/workflows/version-tag.yml
@@ -28,5 +28,6 @@ jobs:
         draft: true
         fail_on_unmatched_files: true
         generate_release_notes: true
+        token: ${{ secrets.RELEASE_TOKEN }}
         files: |
           dist/*
